# sqliteforge

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
build-your-own-sqliteforge/: 00-index.md  01-architecture.md  02-the-skeleton.md  02-the-skeleton.md.test  03-talking-to-sqlite.md  04-making-output-readable.md  05-configuration-and-app.md  06-a-real-interactive-shell.md  07-multiline-queries.md  08-dot-commands.md  09-persistent-history.md  10-syntax-highlighting.md  11-autocomplete-basics.md  12-autocomplete-context-aware.md  13-editing-ergonomics.md  14-database-explorer.md  15-polish-and-loose-ends.md  appendix.md
docs/: REQUIREMENTS.md
src/: main.rs  project_code.txt
src/app/: mod.rs
src/commands/: mod.rs
src/completion/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/explorer/: mod.rs
src/history/: mod.rs
src/renderer/: mod.rs
src/shell/: highlighter.rs  mod.rs  prompt.rs  validator.rs
